first mlflow project

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
+version: '3.8' # Updated to the latest version for better support
 
-version: '3'
 services:
   jupyter:
     build:
@@ -18,29 +18,39 @@ services:
       - AWS_ACCESS_KEY_ID=mlflow
       - AWS_SECRET_ACCESS_KEY=password
       - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
+    depends_on:
+      - minio
 
   mlflow-web:
     build:
       context: ./docker
       dockerfile: Dockerfile
+    container_name: mlflow-mlflow-web-1
     ports:
-      - "5000:5000"
+      - '5000:5000'
     environment:
       - AWS_ACCESS_KEY_ID=mlflow
       - AWS_SECRET_ACCESS_KEY=password
       - MLFLOW_S3_ENDPOINT_URL=http://minio:9000
+      - BACKEND_STORE_URI=postgresql+psycopg2://mlflow:secret@pgsql/mlflow
+      - ARTIFACT_ROOT=s3://mlflow/
     networks:
       - mlflow
-    entrypoint: mlflow server --backend-store-uri postgresql+psycopg2://mlflow:secret@pgsql/mlflow --default-artifact-root s3://mlflow/ --artifacts-destination s3://mlflow/ -h 0.0.0.0
+    command: >
+      mlflow server 
+      --backend-store-uri $BACKEND_STORE_URI
+      --default-artifact-root $ARTIFACT_ROOT 
+      --host 0.0.0.0
     depends_on:
       - pgsql
       - minio
 
   minio:
     image: 'minio/minio:latest'
+    container_name: mlflow-minio-1
     ports:
-      - '${FORWARD_MINIO_PORT:-9000}:9000'
-      - '${FORWARD_MINIO_CONSOLE_PORT:-8900}:8900'
+      - '9000:9000'
+      - '8900:8900'
     environment:
       MINIO_ROOT_USER: mlflow
       MINIO_ROOT_PASSWORD: password
@@ -60,13 +70,13 @@ services:
 
   pgsql:
     image: 'postgres:14'
+    container_name: mlflow-pgsql-1
     ports:
-      - '${FORWARD_DB_PORT:-5432}:5432'
+      - '5432:5432'
     environment:
-      PGPASSWORD: '${DB_PASSWORD:-secret}'
-      POSTGRES_DB: '${DB_DATABASE:-mlflow}'
-      POSTGRES_USER: '${DB_USERNAME:-mlflow}'
-      POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+      POSTGRES_DB: mlflow
+      POSTGRES_USER: mlflow
+      POSTGRES_PASSWORD: secret
     volumes:
       - 'mlflow-pgsql:/var/lib/postgresql/data'
     networks:
@@ -77,9 +87,9 @@ services:
         - pg_isready
         - '-q'
         - '-d'
-        - '${DB_DATABASE:-mlflow}'
+        - mlflow
         - '-U'
-        - '${DB_USERNAME:-mlflow}'
+        - mlflow
       retries: 3
       timeout: 5s
 
